--- a/dist.ini
+++ b/dist.ini
@@ -3,11 +3,12 @@ author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2013
-version          = 0.04
+version          = 0.05
 
 [@Author::Plicease]
 release_tests = 1
 installer     = ModuleBuild
+travis_status = 1
 
 [RemovePrereqs]
 
